--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+
 name: Upload release assets after tagging
 jobs:
   build:
@@ -14,7 +17,9 @@ jobs:
         with:
           go-version: 1.21.x
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/cache@v3
         with:
           path: |
@@ -31,4 +36,4 @@ jobs:
           version: latest
           args: release --clean
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
