--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/cache@v3
+      - name: Restore Pipeline Caches
+        uses: actions/cache@v4
         with:
           path: |
             ~/.cache/go-build
@@ -30,11 +31,11 @@ jobs:
       - name: Get Dependencies
         run: go get
 
-      - name: test
+      - name: Run Unit Tests
         run: go test ./... -v -coverprofile=coverage.out
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
-          version: latest
+          version: '~> v2'
           args: build --snapshot --clean
